modules/network.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.39.26.7824",
      "templateHash": "6779089773767279343"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "metadata": {
        "description": "デプロイ先のリージョン"
      }
    },
    "env": {
      "type": "string",
      "metadata": {
        "description": "環境識別子"
      }
    },
    "projectName": {
      "type": "string",
      "metadata": {
        "description": "プロジェクト名"
      }
    }
  },
  "variables": {
    "vnetName": "[format('vnet-{0}-{1}', parameters('projectName'), parameters('env'))]",
    "nsgNameAppGw": "[format('nsg-appgw-{0}-{1}', parameters('projectName'), parameters('env'))]",
    "nsgNameFirewall": "[format('nsg-firewall-{0}-{1}', parameters('projectName'), parameters('env'))]",
    "nsgNameApim": "[format('nsg-apim-{0}-{1}', parameters('projectName'), parameters('env'))]",
    "nsgNameFunctions": "[format('nsg-functions-{0}-{1}', parameters('projectName'), parameters('env'))]",
    "nsgNamePrivateEndpoint": "[format('nsg-pe-{0}-{1}', parameters('projectName'), parameters('env'))]",
    "vnetAddressPrefix": "10.0.0.0/16",
    "appGwSubnetPrefix": "10.0.1.0/24",
    "firewallSubnetPrefix": "10.0.2.0/24",
    "apimSubnetPrefix": "10.0.3.0/24",
    "functionsSubnetPrefix": "10.0.4.0/24",
    "privateEndpointSubnetPrefix": "10.0.5.0/24"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[variables('nsgNameAppGw')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowGatewayManager",
            "properties": {
              "priority": 100,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "GatewayManager",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "65200-65535"
            }
          },
          {
            "name": "AllowHTTPS",
            "properties": {
              "priority": 110,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "AllowAzureLoadBalancer",
            "properties": {
              "priority": 120,
              "protocol": "*",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[variables('nsgNameFirewall')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[variables('nsgNameApim')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowManagementEndpoint",
            "properties": {
              "priority": 100,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "ApiManagement",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "3443"
            }
          },
          {
            "name": "AllowHTTPSInbound",
            "properties": {
              "priority": 110,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "443"
            }
          },
          {
            "name": "AllowHTTPInbound",
            "properties": {
              "priority": 120,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "AllowAzureLoadBalancer",
            "properties": {
              "priority": 130,
              "protocol": "*",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[variables('nsgNameFunctions')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-05-01",
      "name": "[variables('nsgNamePrivateEndpoint')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-05-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "ApplicationGatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('appGwSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNameAppGw'))]"
              }
            }
          },
          {
            "name": "AzureFirewallSubnet",
            "properties": {
              "addressPrefix": "[variables('firewallSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNameFirewall'))]"
              }
            }
          },
          {
            "name": "ApiManagementSubnet",
            "properties": {
              "addressPrefix": "[variables('apimSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNameApim'))]"
              },
              "delegations": [
                {
                  "name": "apim-delegation",
                  "properties": {
                    "serviceName": "Microsoft.ApiManagement/service"
                  }
                }
              ]
            }
          },
          {
            "name": "FunctionsSubnet",
            "properties": {
              "addressPrefix": "[variables('functionsSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNameFunctions'))]"
              },
              "delegations": [
                {
                  "name": "functions-delegation",
                  "properties": {
                    "serviceName": "Microsoft.Web/serverFarms"
                  }
                }
              ]
            }
          },
          {
            "name": "PrivateEndpointSubnet",
            "properties": {
              "addressPrefix": "[variables('privateEndpointSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNamePrivateEndpoint'))]"
              },
              "privateEndpointNetworkPolicies": "Disabled"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNameApim'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNameAppGw'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNameFirewall'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNameFunctions'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgNamePrivateEndpoint'))]"
      ]
    }
  ],
  "outputs": {
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
    },
    "vnetName": {
      "type": "string",
      "value": "[variables('vnetName')]"
    },
    "appGwSubnetId": {
      "type": "string",
      "value": "[format('{0}/subnets/ApplicationGatewaySubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]"
    },
    "firewallSubnetId": {
      "type": "string",
      "value": "[format('{0}/subnets/AzureFirewallSubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]"
    },
    "apimSubnetId": {
      "type": "string",
      "value": "[format('{0}/subnets/ApiManagementSubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]"
    },
    "functionsSubnetId": {
      "type": "string",
      "value": "[format('{0}/subnets/FunctionsSubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]"
    },
    "privateEndpointSubnetId": {
      "type": "string",
      "value": "[format('{0}/subnets/PrivateEndpointSubnet', resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')))]"
    }
  }
}
